--- a/app/src/main/res/layout/fragment_borrar.xml
+++ b/app/src/main/res/layout/fragment_borrar.xml
@@ -16,8 +16,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:ems="10"
+            android:hint="Ingrese codigo"
             android:inputType="text"
-            android:text="Name"
             android:textSize="34sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
@@ -29,7 +29,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="128dp"
-            android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +38,8 @@
             android:id="@+id/btnBorrar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:layout_marginTop="68dp"
+            android:text="buscar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvAviso" />
